refactor: configuration